--- a/package.json
+++ b/package.json
@@ -1,21 +1,33 @@
 {
   "name": "buffer-offset-index",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "An index that maps character indices in the buffer to 2d coordinates.",
-  "main": "build/Release/buffer_offset_index",
+  "main": "src/entry-node",
+  "browser": "src/entry-browser",
   "scripts": {
-    "test": "node-gyp rebuild && mocha test/**/*.test.js",
-    "install": "node-gyp rebuild"
+    "autogypi": "autogypi",
+    "node-gyp": "node-gyp",
+    "emcc-path": "emcc-path",
+    "copyasm": "copyasm",
+    "ndts": "ndts",
+    "build:all": "npm run build:native && npm run build:browser",
+    "build:native": "npm run node-gyp configure build",
+    "build:browser": "npm run node-gyp configure build --asmjs=1",
+    "test": "npm run build:all && npm run test:nobuild",
+    "test:nobuild": "mocha --full-trace test/**/*.test.js",
+    "install": "npm run autogypi && npm run build:native && npm run install-browser",
+    "install-browser": "test -e build/Release/nbind.js || which em++ 2>&1 > /dev/null && npm run build:browser",
+    "prepublish": "npm run build:browser"
   },
   "author": "",
   "license": "MIT",
-  "gypfile": true,
   "devDependencies": {
     "mocha": "^3.1.2",
-    "random-seed": "^0.3.0",
-    "segfault-handler": "^1.0.0"
+    "random-seed": "^0.3.0"
   },
   "dependencies": {
-    "nan": "^2.4.0"
+    "autogypi": "^0.2.2",
+    "nbind": "^0.3.5",
+    "node-gyp": "^3.4.0"
   }
 }
