--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-sudo: false
+sudo: required
 
 git:
   depth: 10
@@ -7,12 +7,22 @@ language: node_js
 
 node_js: 6
 
-env:
-  - CC=clang CXX=clang++ npm_config_clang=1
-
-script: npm test
+script: npm run test:noasmjs
 
 notifications:
   email:
     on_success: never
     on_failure: change
+
+env:
+  - CXX=clang++-3.8
+
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+      - llvm-toolchain-precise-3.8
+    packages:
+      - gcc-5
+      - g++-5
+      - clang-3.8
