Adds bench script

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build:native": "npm run node-gyp configure build",
     "build:browser": "npm run node-gyp configure build --asmjs=1",
     "test": "npm run build:all && npm run test:nobuild",
-    "test:nobuild": "mocha --full-trace test/**/*.test.js",
+    "bench": "npm run build:all && TEST_ASMJS=0 time mocha test/buffer-index.test.js && TEST_NATIVE=0 time mocha test/buffer-index.test.js",
+    "test:nobuild": "mocha test/**/*.test.js",
     "test:noasmjs": "npm run build:native && TEST_ASMJS=0 mocha --full-trace test/**/*.test.js",
     "install": "npm run autogypi && npm run build:native && npm run install-browser",
     "install-browser": "test -e build/Release/nbind.js || ! command -v emsdk 2>&1 > /dev/null || npm run build:browser",
